# bybit-orderflow-bot

./: .env.example  .gitignore  Cargo.toml  MEMORY.md  README.md  start-bot.sh
config/: default.toml
src/: lib.rs  main.rs
src/bybit/: auth.rs  mod.rs  types.rs  websocket.rs
src/config/: mod.rs
src/execution/: mod.rs
src/market_data/: mod.rs
src/metrics/: mod.rs
src/orderbook/: manager.rs  metrics.rs  mod.rs  validation.rs
src/risk/: mod.rs
src/strategy/: mod.rs
src/telegram/: mod.rs
src/utils/: mod.rs
tests/: integration_test.rs
