[package]
name = "bybit-orderflow-bot"
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = 2
lto = false
codegen-units = 4
panic = "abort"
strip = true
debug = false

# Reduce optimization for packages with heavy C compilation
[profile.release.package."ring"]
opt-level = 1

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.5"

# Serialization (SIMD optimizations)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"

# Cryptography (HMAC for Bybit auth)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Collections (lock-free)
dashmap = "5.5"          # Concurrent HashMap
crossbeam = "0.8"        # Lock-free channels
parking_lot = "0.12"     # Faster Mutex/RwLock

# Time
chrono = "0.4"

# Metrics & Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Math
ordered-float = "4.2"    # Total ordering for f64

# Configuration
config = "0.14"
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Testing
[dev-dependencies]
criterion = "0.5"        # Benchmarking
